--- a/redirect.html
+++ b/redirect.html
@@ -4,20 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Haku Melindan tietuetunnuksella tai formaatista MARC21-kentällä</title>
-    <style>
-      #teksti {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 50%;
-        text-align: right;
-      }
-      a {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        text-align: right;
-        font-size: 100%;
-        color: green;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
