Autofocus, lähetys enterillä, välilyönnillä erotetut IDt toimivat

--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
         <li>MARC 21 -formaatin sovellusohjeesta Melinda-kirjastoille (haku kenttänumerolla)</li>
       </ol>
 
-      <p>Melindan tietuetunnisteita voit syöttää hakukenttään myös useamman pilkulla erotettuna, jolloin jokainen tietue avautuu selaimessa omaan välilehteensä.</p>
+      <p>Melindan tietuetunnisteita voit syöttää hakukenttään myös useamman pilkulla tai välilyönnillä erotettuna, jolloin jokainen tietue avautuu selaimessa omaan välilehteensä.</p>
    
   </body>
 </html>
