--- a/redirect.html
+++ b/redirect.html
@@ -10,7 +10,7 @@
   <body>
     <div id="form">
       <form id="select">
-      <input type="text" id="querystring">
+      <input type="text" id="querystring" autofocus>
       <br /><br />
         <span class="teksti">
         <input type="radio" name="select" id="melinda" checked>Melinda
