Lisätty mahdollisuus hakea MARC 21 -sovellusohjeen RDA-versiosta

--- a/redirect.html
+++ b/redirect.html
@@ -19,7 +19,9 @@
         <br />
         <input type="radio" name="select" id="marc21loc">MARC 21 Full (LOC)
         <br />
-        <input type="radio" name="select" id="sovellusohje">MARC 21 sovellusohje
+        <input type="radio" name="select" id="sovellusohjerda">MARC 21 sovellusohje (RDA)
+        <br />
+        <input type="radio" name="select" id="sovellusohjeisbd">MARC 21 sovellusohje (ISBD)
       </span>
       </form>
       <br />
